2007-03-12 [colin]	2.8.1cvs8

	* src/wizard.c
		Fix bug 1145, 'Setting a different name 
		for the Mailbox name isn't reflected in 
		default account settings'. Patch by wwp

2007-03-12 [colin]	2.8.1cvs7

	* src/summaryview.c
		Fix bug 1143, 'Add number of messages to be 
		deleted to confirmation dialog'

2007-03-12 [wwp]	2.8.1cvs6

	* src/folderview.c
	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_summaries.c
		Changed the option that displays unread messages count
		next to the folder name in folder list: it is now
		possible to either display nothing, display the
		unread messages number only or the unread and total messages
		numbers. The patch includes this extra feature as well
		as some minor fixes by rewriting the algo in folderview.c.
		Thanks to Paul for the original idea and implementation, plus
		testing and proof-reading!

2007-03-09 [paul]	2.8.1cvs5

	* tools/Makefile.am
	* tools/README
	* tools/claws-mail-compose-insert-files.pl
		added a script which enables inserting files
		into the message body of a new Claws Mail
		Compose window from the command line. Additionally
		To, Cc, Subject and files to attach to the message
		can be specified.

2007-03-09 [wwp]	2.8.1cvs4

	* src/addr_compl.c
	* src/addr_compl.h
	* src/filtering.c
		Optimize matching of addresses in the addressbook
		(filtering/processing 'found_in_addressbook' condition).

2007-03-07 [wwp]	2.8.1cvs3

	* src/quote_fmt.c
	* src/quote_fmt_lex.l
	* src/quote_fmt_parse.y
		Add a new quote format symbol: %A to insert the
		sender email address (just the address itself).

2007-03-06 [wwp]	2.8.1cvs2

	* src/gtk/gtkutils.c
	* src/plugins/trayicon/trayicon_prefs.h
	* src/plugins/trayicon/trayicon_prefs.c
	* src/plugins/trayicon/trayicon.c
	* src/mainwindow.h
	* src/mainwindow.c
		Add a new trayicon (optional) feature: minimize to tray. When enabled,
		minimizing Claws-Mail main window will hide it to the trayicon instead.


2007-03-06 [paul]	2.8.1cvs1

	* NEWS
	* README