@@ -1,3 +1,10 @@
+2007-03-14 [colin]	2.8.1cvs9
+
+	* src/main.c
+		If claws-mail is running on another
+		display, warn instead of popping it up
+		on the other display
+
 2007-03-12 [colin]	2.8.1cvs8
 
 	* src/wizard.c
